# FINKIstuffStefan

./: README.md
EMT/DDD_E-Shop/: pom.xml
EMT/DDD_E-Shop/backend/: pom.xml
EMT/DDD_E-Shop/backend/order-management/: pom.xml
EMT/DDD_E-Shop/backend/order-management/src/main/resources/: application.properties
EMT/DDD_E-Shop/backend/src/main/java/org/example/WebSockets/: WebSocketConfig.java
EMT/DDD_E-Shop/backend/support-chat/: pom.xml
EMT/DDD_E-Shop/backend/support-chat/src/main/resources/: application.properties
EMT/DDD_E-Shop/frontend/untitled/: package-lock.json
EMT/DDD_E-Shop/frontend/untitled/src/: Chat.js  Products.js
EMT/DDD_E-Shop/order-management/: pom.xml
EMT/DDD_E-Shop/order-management/src/main/java/ddd/eshop/ordermanagement/: OrderManagementApplication.java
EMT/DDD_E-Shop/product-handler/: pom.xml
EMT/DDD_E-Shop/product-handler/src/main/java/ddd/eshop/producthandler/: ProductHandlerApplication.java
EMT/DDD_E-Shop/product-handler/src/main/resources/: application.properties
EMT/DDD_E-Shop/shared-kernel/: pom.xml
EMT/DDD_E-Shop/users-manager-server/: README.md  pom.xml
EMT/DDD_E-Shop/users-manager-server/src/main/resources/: application.properties
Napredno/GenerickoSortiranaMapa/: MapSortingTest.java
Napredno/PhoneBook/: PhoneBookTest.java
Napredno/StudentRecords/: Record.java  StudentRecords.java  StudentRecordsTest.java
Robotics/GledachZvezdi/: CMakeLists.txt  slave.ino
Robotics/GledachZvezdi/master/: master.ino
WebProgramming/Exam/kol2022-g2/src/main/resources/templates/: form.html  list.html
(+71 files in other folders)
